--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "mongoose": "^6.7.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "name": "backend",
   "version": "1.0.0",
