--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
+  "name": "todo_api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.7.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Md-Irfan-FullStackDeveloper/Todo_api.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "bugs": {
+    "url": "https://github.com/Md-Irfan-FullStackDeveloper/Todo_api/issues"
+  },
+  "homepage": "https://github.com/Md-Irfan-FullStackDeveloper/Todo_api#readme"
 }
